[project]
name = "twocaptcha-python"
version = "0.0.2"
description = "Python client for TwoCaptcha API - Solve captchas with ease using the TwoCaptcha service"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sujit Biswas", email = "ssujitxx@gmail.com"}
]
maintainers = [
    {name = "Sujit Biswas", email = "ssujitxx@gmail.com"}
]
keywords = [
    "2captcha",
    "2captcha api",
    "2captcha api python",
    "2captcha api python client",
    "twocaptcha",
    "captcha",
    "solver",
    "python",
    "api",
    "client",
    "automation",
    "recaptcha",
    "hcaptcha",
    "image-captcha",
    "text-captcha"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/SSujitX/twocaptcha-python"
Repository = "https://github.com/SSujitX/twocaptcha-python"
Documentation = "https://github.com/SSujitX/twocaptcha-python#readme"
Issues = "https://github.com/SSujitX/twocaptcha-python/issues"
"Bug Tracker" = "https://github.com/SSujitX/twocaptcha-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["TwoCaptcha"]
